--- a/application.properties
+++ b/application.properties
@@ -2,9 +2,9 @@
 server.port: 9999
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/docdive?autoReconnect=true&useSSL=false
-spring.datasource.username = oneaa
-spring.datasource.password = 123456
+spring.datasource.url = jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = root
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
