--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #
-server.port: 9999
+server.port: 7788
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://172.16.50.21:3306/test?autoReconnect=true&useSSL=false
-spring.datasource.username = app
-spring.datasource.password = hadoop
+spring.datasource.url = jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = root
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
